--- a/Naruto.html
+++ b/Naruto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>one Piece</title>
+    <title>Naruto</title>
     <link rel="stylesheet" href="anotherpg.css">
     <script src="https://kit.fontawesome.com/92e6dde6ad.js" crossorigin="anonymous"></script>
 </head>
