--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <p>An intelligent high school student goes on a secret crusade to eliminate criminals </p>
                             <p> From the world after discovering a notebook capable of killing anyone whose name is
                                 written into it.</p>
-                            <a href="#" class="btn btndeathnote" target="_blank">Watch Now</a>
+                            <a href="deathnote.html" class="btn btndeathnote" target="_blank">Watch Now</a>
                             <div class="previcon"> <i class="fa-solid fa-circle-chevron-left prevbutton"></i></div>
                             <div class="nexticon"> <i class="fa-solid fa-circle-chevron-right nextbutton"></i></div>
 
