--- a/deathnote.html
+++ b/deathnote.html
@@ -46,7 +46,7 @@
             <!-- <img src="/images/narutosas.jpg" alt=""> -->
         </div>
         <div class="vid">
-            <video controls src="/images/Death Note.mp4"></video>
+            <video controls src="Death Note.mp4"></video>
         </div>
     </div>
     <section class="onepiece-content">
@@ -97,7 +97,7 @@
         <h2>Best Arc's</h2>
         <div class="container1">
             <div class="arcimg">
-                <img src="/images/dtarc1.avif" alt="">
+                <img src="dtarc1.avif" alt="">
             </div>
             <div class="arccontent">
                 <h2 class="naruto-archead">1. Encounter </h2>
@@ -110,7 +110,7 @@
         </div>
         <div class="container1">
             <div class="arcimg">
-                <img src="/images/dtarc2.avif" alt="">
+                <img src="dtarc2.avif" alt="">
             </div>
             <div class="arccontent">
                 <h2 class="naruto-archead"> 2. Assault</h2>
@@ -123,7 +123,7 @@
         </div>
         <div class="container1">
             <div class="arcimg">
-                <img src="/images/dtarc3.avif" alt="">
+                <img src="dtarc3.avif" alt="">
             </div>
             <div class="arccontent">
                 <h2 class="naruto-archead">3. Pursuit</h2>
@@ -136,7 +136,7 @@
         </div>
         <div class="container1">
             <div class="arcimg">
-                <img src="/images/dtarc4.avif" alt="">
+                <img src="dtarc4.avif" alt="">
             </div>
             <div class="arccontent">
                 <h2 class="naruto-archead">4. Frenzy</h2>
@@ -149,7 +149,7 @@
         </div>
         <div class="container1">
             <div class="arcimg">
-                <img src="/images/dtarc5.avif" alt="">
+                <img src="dtarc5.avif" alt="">
             </div>
             <div class="arccontent">
                 <h2 class="naruto-archead">5. Wager </h2>
