--- a/deathnote.html
+++ b/deathnote.html
@@ -16,11 +16,11 @@
     <header class="header">
         <a href="" class="logo1"> <i class="fa-brands fa-codepen"></i> <span>Animix Osu</span> </a>
         <navbar class="navbar">
-            <a href="index.html" class="active hoveff">Home</a>
-            <a href="#reco" class="hoveff">Hunter X Hunter</a>
+           <a href="index.html" class="active hoveff">Home</a>
+            <a href="hunterxhunter.html" class="hoveff">Hunter X Hunter</a>
             <a href="Naruto.html" class="hoveff">Naruto</a>
             <a href="onepiece.html" class="hoveff">One Piece</a>
-            <a href="contactusform.html" class="hoveff">Contact Us</a>
+            <a href="animixosucontact.html" class="hoveff">Contact Us</a>
         </navbar>
         <div class="icons">
 
